# dependency-visualizer

./: .gitignore  README.md  docker-compose.yml  start.sh  stop.sh
backend/: .env.example  .gitignore  Dockerfile  README.md  cli.py  gunicorn_conf.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  celery_app.py  config.py  dependencies.py  main.py
backend/app/api/: comparison.py  error_handlers.py  models.py  preview.py  routes.py
backend/app/audit/: __init__.py  logger.py
backend/app/auth/: routes.py  security.py
backend/app/core/: cache.py  cache_strategies.py  circuit_breaker.py  discovery.py  exceptions.py  git_blame.py  go_extractor.py  health.py  import_graph.py  language_detector.py  logging.py  metrics.py  parallel_parser.py  plugins.py  redis_cache.py  repository.py  secrets.py  trace_decorators.py  tracing.py  validation.py  zip_extract.py
backend/app/core/graph/: analyzer.py  builder.py  impact.py  (+1 more)
backend/app/dev/: __init__.py  profiling.py
backend/app/graphql/: __init__.py  schema.py
backend/app/middleware/: __init__.py  rate_limiter.py  request_id.py  security.py
backend/app/services/: analysis_service.py
backend/app/tasks/: analysis.py
backend/app/websocket/: __init__.py  manager.py  routes.py
backend/scripts/: js_ast_parser.js  package-lock.json  package.json
backend/tests/: test_analyzer.py  test_api.py  test_go_parser.py  test_graph_builder.py  test_impact_analyzer.py  test_java_parser.py  test_java_resolver.py  test_javascript_parser.py  test_javascript_resolver.py  test_parser.py  test_repository.py
(+130 files in other folders)
